# Javadoc-updating-automation

./: .gitignore  AGENTS.md  README.md  pyproject.toml
analysis/: commits_to_reprocess_without_cap.json  commits_with_exactly_3_changes.json  max_changes_per_commit_audit.json  max_changes_per_commit_audit.md  max_changes_per_commit_sample_audit.json
dataset/: inspection_examples.json  sample_0001.json  sample_0002.json  sample_0003.json  sample_0004.json  sample_0005.json  sample_0006.json  sample_0007.json  sample_0008.json  sample_0009.json  sample_0010.json  sample_0011.json  sample_0012.json  sample_0013.json  sample_0014.json  sample_0015.json  sample_0016.json  sample_0017.json  sample_0018.json  sample_0019.json  sample_0020.json  sample_0021.json  sample_0022.json  sample_0023.json  sample_0024.json  sample_0025.json  sample_0026.json  sample_0027.json  sample_0028.json  sample_0029.json  sample_0030.json  sample_0031.json  sample_0032.json  sample_0033.json  sample_0034.json  sample_0035.json  sample_0036.json  sample_0037.json  sample_0038.json  sample_0039.json  (+13 more)
dataset_commons_lang_50/: combined_samples.json  inspection_examples.json  sample_0005.json  sample_0007.json  sample_0008.json  sample_0010.json  sample_0011.json  sample_0012.json  sample_0013.json  sample_0014.json  sample_0015.json  sample_0020.json  sample_0023.json  sample_0024.json  sample_0027.json  sample_0029.json  sample_0032.json  sample_0033.json  sample_0035.json  sample_0036.json  stats.json  summary.csv
final_dataset/: README.md  summary.csv
final_dataset_merged/: README.md  (+4 more)
(+3715 files in other folders)
